--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,66 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: poppins;
+  src: url('../public/fonts/Poppins-ExtraLight.ttf');
+  font-weight: 300;
+  font-style: normal;
 }
 
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: poppins;
+  src: url('../public/fonts/Poppins-Light.ttf');
+  font-weight: 400;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@font-face {
+  font-family: poppins;
+  src: url('../public/fonts/Poppins-Medium.ttf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: poppins;
+  src: url('../public/fonts/Poppins-SemiBold.ttf');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: poppins;
+  src: url('../public/fonts/Poppins-Bold.ttf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: poppins;
+  src: url('../public/fonts/Poppins-ExtraBold.ttf');
+  font-weight: 800;
+  font-style: normal;
+}
+
+/* .user_post_feed::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgba(231, 229, 229, 0.87);
+} */
+
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: rgba(231, 229, 229, 0.87);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(153, 152, 152, 0.308);
+  border-radius: 20px;
 }
